# sqlalchemy_dremio

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py
.github/workflows/: dremio.yml  pythonapp.yml
sqlalchemy_dremio/: __init__.py  base.py  compiler.py  db.py  flight.py  flight_auth.py  flight_middleware.py  pyodbc.py  query.py
test/: conftest.py  test_additional.py  test_dremio.py  test_dremio_arctic.py  test_flight_dialect.py
tests/: conftest.py  test_dremio.py
tests/scripts/: sample.sql
